--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/migig/Downloads/restfb-2.11.0.jar"/>
+	<classpathentry kind="lib" path="BibliotecasExternas/restfb-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
