--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
   <groupId>ProjectoES</groupId>
   <artifactId>ProjectoES</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -16,4 +19,21 @@
       </plugin>
     </plugins>
   </build>
+  
+  <dependencies>
+  		<!-- https://mvnrepository.com/artifact/com.restfb/restfb -->
+		<dependency>
+		    <groupId>com.restfb</groupId>
+		    <artifactId>restfb</artifactId>
+		    <version>2.10.0</version>
+		</dependency>
+		
+  		<!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
+		<dependency>
+		    <groupId>org.twitter4j</groupId>
+		    <artifactId>twitter4j-core</artifactId>
+		    <version>4.0.7</version>
+		</dependency>
+  </dependencies>
+		
 </project>
